@@ -1029,3 +1029,7 @@
 ===============================================================================
 30 Sep 95: Released TclX 7.5a Alpha 1
 -------------------------------------------------------------------------------
+10 Oct 95:
+  o Added interfaces to TclX_Init and TkX_Init that follow the new calling 
+    convention for dynamic loading.
+-------------------------------------------------------------------------------
